--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="16" />
     
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -15,6 +15,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps" />
         <activity
             android:name=".MainMenuActivity"
             android:label="@string/title_activity_main_menu" >
@@ -24,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="NewTrip"></activity>
+        <activity android:name=".NewTrip"></activity>
         
         <activity
             android:name=".MapJournelMapActivity"
@@ -34,7 +35,7 @@
         
         
         <activity
-            android:name=".addPointActivity"
+            android:name="addPointActivity"
             android:label="@string/title_activity_add_point" >
         </activity>
         
