--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="NewTrip"></activity>
+        <activity android:name=".NewTripActivity"></activity>
         <activity android:name="PreviousTripsActivity"></activity>
 
         
