--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,12 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
-
+        android:targetSdkVersion="16" />
+    
+	<uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -21,6 +25,19 @@
             </intent-filter>
         </activity>
         <activity android:name="NewTrip"></activity>
+        
+        <activity
+            android:name=".MapJournelMapActivity"
+            android:label="@string/title_activity_main" >
+            
+        </activity>
+        
+        
+        <activity
+            android:name=".addPointActivity"
+            android:label="@string/title_activity_add_point" >
+        </activity>
+        
     </application>
 
 </manifest>
